testsuite/tests/interpreter_errors/invalid_when_clause_return_type/test.out
script.lkql:1:16: error: Type error: expected Bool but got Str
  1 | val p = select p when "Hello"
    |                ^^^^^^^^^^^^^^
